fix: typo in docker commands

--- a/docs/data-ingestion/data-transformer-from-scratch.mdx
+++ b/docs/data-ingestion/data-transformer-from-scratch.mdx
@@ -617,7 +617,7 @@ networks:
 When developing you must careful to start the transformer with `rabbitmq` service
 
 ```
-docker compose up --dev bdp
+docker compose up --profile dev
 ```
 :::
 
