--- a/docs/data-ingestion/data-collector-from-scratch.mdx
+++ b/docs/data-ingestion/data-collector-from-scratch.mdx
@@ -409,7 +409,7 @@ networks:
 When developing you must careful to start the collector with `rabbitmq` service
 
 ```
-docker compose up --dev bdp
+docker compose up --profile dev
 ```
 :::
 
